@@ -983,6 +983,6 @@ That's really what it looks like.<P>
 
 <BR>
 David Parrish<BR>
-<A HREF="mailto:david@dparrish.com?subject=L2TPNS+Documentation">david@dparrish.com</A>
+<A HREF="mailto:david@dparrish.com?subject=L2TPNS%20Documentation">david@dparrish.com</A>
 </BODY>
 </HTML>
