@@ -1,5 +1,8 @@
 * ??? 2.0.2
 - Apply patch to fix -v option from Juergen Kammer.
+- Makefile fix from Juergen Kammer to not overwrite existing config files on
+  make install
+- Configurable radius port patch from Juergen Kammer.
 
 * Tue Jul 13 2004 Brendan O'Dea <bod@optusnet.com.au> 2.0.1
 - Update INSTALL, Docs/manual.html documentation.
